--- a/_posts/version0/2014-02-01-java-hash-map-endless-loop.html
+++ b/_posts/version0/2014-02-01-java-hash-map-endless-loop.html
@@ -1,5 +1,5 @@
 ---
-layout : post
+layout : articles
 title : Java HashMap的死循环
 ---
 <p>当你开始设计数据库的时候，第一件事，就是分析，你设计的数据库，是为那种类型的数据库提供服务的。具体来说，到底是事务型（Transactional）还是分析型（Analytical）。你可以发现，很多developer根本就不管自己的应用到底是那种类型，就直接按照“范式”的规定设计，最终，碰上了各种各样的性能、用户化问题。正如所说，有两种应用类型：基于事务的、基于分析的。让我来简单地介绍下这两种类型。
