--- a/_posts/version0/2014-06-04-nice-good-4784512 - 副本.html
+++ b/_posts/version0/2014-06-04-nice-good-4784512 - 副本.html
@@ -1,13 +1,13 @@
 ---
 layout : articles
-title : ÎÞ X ÆðÀ´£¬ÓúÊÇÎÞ X µ½ÑÔÓïËùÎÞ·¨ÐÎÈÝ¡£
+title : æ—  X èµ·æ¥ï¼Œæ„ˆæ˜¯æ—  X åˆ°è¨€è¯­æ‰€æ— æ³•å½¢å®¹ã€‚
 ---
-³ö×ÔÃ÷´ú²ÜÑ§çµÄÊ«£¬±¾×÷£º¡°ÕÌÒå°ë´ÓÍÀ¹·±²£¬¸ºÐÄ¶¼ÊÇ¶ÁÊéÈË¡£¡±ÓÖ×÷£º¡°ÕÌÒåÃ¿´ÓÍÀ¹·±²£¬¸ºÐÄ¶àÊÇ¶ÁÊéÈË¡£
+å‡ºè‡ªæ˜Žä»£æ›¹å­¦ä½ºçš„è¯—ï¼Œæœ¬ä½œï¼šâ€œä»—ä¹‰åŠä»Žå± ç‹—è¾ˆï¼Œè´Ÿå¿ƒéƒ½æ˜¯è¯»ä¹¦äººã€‚â€åˆä½œï¼šâ€œä»—ä¹‰æ¯ä»Žå± ç‹—è¾ˆï¼Œè´Ÿå¿ƒå¤šæ˜¯è¯»ä¹¦äººã€‚
 
-ÄÜÐ´³öÕâÑùµÄ»°À´£¬×Ô¼º±ØÈ»¾ÍÊÇ¸ö¶ÁÊéÈË¡£ÕâÒ²ÊÇ»ýÅ­ÓÚÐÄ£¬±ØÓÐËù·¢¡£ÉÏÁªÖ¸²»ºÏ×÷µÄÒþÊ¿£¬ÏÂÁªÖ¸½µÇåµÄÅÑÍ½¡£
+èƒ½å†™å‡ºè¿™æ ·çš„è¯æ¥ï¼Œè‡ªå·±å¿…ç„¶å°±æ˜¯ä¸ªè¯»ä¹¦äººã€‚è¿™ä¹Ÿæ˜¯ç§¯æ€’äºŽå¿ƒï¼Œå¿…æœ‰æ‰€å‘ã€‚ä¸Šè”æŒ‡ä¸åˆä½œçš„éšå£«ï¼Œä¸‹è”æŒ‡é™æ¸…çš„å›å¾’ã€‚
 
-Ò²ÓÐËµ·¨£ºÒòÍÀ¹·Òµ²»ÉÏÌ¨Ãæµ«Çó¿ìÒâÕßÖÚ¶à£¬ËùÒÔ×Ô¹Å²ØÁúÎÔ»¢ÕßÆµ³ö£¬²»½öÔÚÃñ¼ä¹ã·ºÁ÷´«×Å¡°ÕÌÒåÃ¿´ÓÍÀ¹·±²£¬¸ºÐÄ½ÔÊÇ¶ÁÊéÈË¡±¡¢¡°Ó¢ÐÛÃ¿¶àÍÀ¹·±²£¬ÏÀÅ®´ÓÀ´³ö·ç³¾¡±µÄË×Óï£¬Çå´úÊ«ÈË»ÆÖÙÔòÒ²ÓÐ¡°ÕÌÒåÃ¿¶àÍÀ¹·±²¡±µÄÊ«¾ä¡£
+ä¹Ÿæœ‰è¯´æ³•ï¼šå› å± ç‹—ä¸šä¸ä¸Šå°é¢ä½†æ±‚å¿«æ„è€…ä¼—å¤šï¼Œæ‰€ä»¥è‡ªå¤è—é¾™å§è™Žè€…é¢‘å‡ºï¼Œä¸ä»…åœ¨æ°‘é—´å¹¿æ³›æµä¼ ç€â€œä»—ä¹‰æ¯ä»Žå± ç‹—è¾ˆï¼Œè´Ÿå¿ƒçš†æ˜¯è¯»ä¹¦äººâ€ã€â€œè‹±é›„æ¯å¤šå± ç‹—è¾ˆï¼Œä¾ å¥³ä»Žæ¥å‡ºé£Žå°˜â€çš„ä¿—è¯­ï¼Œæ¸…ä»£è¯—äººé»„ä»²åˆ™ä¹Ÿæœ‰â€œä»—ä¹‰æ¯å¤šå± ç‹—è¾ˆâ€çš„è¯—å¥ã€‚
 
-ÒªÎÒËµ£¬ÎÒ»á¸ÄÎª¡¸¡¸ÕÌÒåÃ¿´ÓÍÀ¹·±²£¬ÎÞÇé¡¢ÎÞ³Ü¡¢ÎÞ¸ñ¡¢ÎÞµ×ÏÞ£¬¶àÊÇ¶ÁÊéÈË¡¹¡£
+è¦æˆ‘è¯´ï¼Œæˆ‘ä¼šæ”¹ä¸ºã€Œã€Œä»—ä¹‰æ¯ä»Žå± ç‹—è¾ˆï¼Œæ— æƒ…ã€æ— è€»ã€æ— æ ¼ã€æ— åº•é™ï¼Œå¤šæ˜¯è¯»ä¹¦äººã€ã€‚
 
-Êé¶ÁÓú¶à£¬ÎÞ X ÆðÀ´£¬ÓúÊÇÎÞ X µ½ÑÔÓïËùÎÞ·¨ÐÎÈÝ¡£
+ä¹¦è¯»æ„ˆå¤šï¼Œæ—  X èµ·æ¥ï¼Œæ„ˆæ˜¯æ—  X åˆ°è¨€è¯­æ‰€æ— æ³•å½¢å®¹ã€‚
